Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h
@@ -61,6 +61,12 @@ protected:
     const IntRect& viewportRect() const { return m_viewportRect; }
     const IntSize& totalContentsSize() const { return m_totalContentsSize; }
 
+    // If the totalContentsSize changes in the middle of a rubber-band, we still want to use the old totalContentsSize for the sake of
+    // computing the stretchAmount(). Using the old value will keep the animation smooth. When there is no rubber-band in progress at
+    // all, m_totalContentsSizeForRubberBand should be equivalent to m_totalContentsSize.
+    const IntSize& totalContentsSizeForRubberBand() const { return m_totalContentsSizeForRubberBand; }
+    void setTotalContentsSizeForRubberBand(const IntSize& totalContentsSizeForRubberBand) { m_totalContentsSizeForRubberBand = totalContentsSizeForRubberBand; }
+
     float frameScaleFactor() const { return m_frameScaleFactor; }
 
     ScrollElasticity horizontalScrollElasticity() const { return m_horizontalScrollElasticity; }
@@ -79,6 +85,7 @@ protected:
 private:
     IntRect m_viewportRect;
     IntSize m_totalContentsSize;
+    IntSize m_totalContentsSizeForRubberBand;
     IntPoint m_scrollOrigin;
     
     float m_frameScaleFactor;
